--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$gray: #F4F4F4;
+
+body {
+  background: $gray; // Using this variable
+}
+
+.container {
+  text-align: left;
+}
+
+.card {
+  width: 100%;
+  height: 100px;
+  border-left: 10px solid lightgrey;
+  padding: 10px;
+  margin: 10px;
+}
